--- a/index.html
+++ b/index.html
@@ -71,29 +71,29 @@
         <div class="fulled-container">
             <div class="row between align-center">
                 <div class="box">
-                    <img class="winners-img margin-img" src="img/winners1.svg" alt="winners-img">
+                    <img class="winners-img margin-img" src="img/winners2.svg" alt="winners-img" width="98px">
                     <h3 class="winers-title">Naxly as the Winners in Global Agency Awards</h3>
-                    <p class="winerrs-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <p class="winerrs-text">Lorem ipsum is placeholder text<br>commonly used in print, and<br>publishing industries for previewing<br>layouts and visual mockups.</p>
                 </div>
                 <div class="box">
-                    <img class="winners-img" src="img/winners2.svg" alt="winners-img">
-                    <h3 class="winers-title">Expert Prespective Agency Awards</h3>
-                    <p class="winerrs-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <img class="winners-img" src="img/winners2.svg" alt="winners-img" width="98px">
+                    <h3 class="winers-title">Expert Prespective<br>Agency Awards</h3>
+                    <p class="winerrs-text">Lorem ipsum is placeholder text<br>commonly used in print, and<br>publishing industries for previewing<br>layouts and visual mockups.</p>
                 </div>
                 <div class="box">
                     <img class="winners-img" src="img/winners3.svg" alt="winners-img">
                     <h3 class="winers-title">Business Prespective Global Agency Awards</h3>
-                    <p class="winerrs-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <p class="winerrs-text">Lorem ipsum is placeholder text<br>commonly used in print, and<br>publishing industries for previewing<br>layouts and visual mockups.</p>
                 </div>
                 <div class="box">
                     <img class="winners-img" src="img/winners4.svg" alt="winners-img">
                     <h3 class="winers-title">Value for Results in Global Agency Awards</h3>
-                    <p class="winerrs-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <p class="winerrs-text">Lorem ipsum is placeholder text<br>commonly used in print, and<br>publishing industries for previewing<br>layouts and visual mockups.</p>
                 </div>
                 <div class="box">
                     <img class="winners-img" src="img/winners5.svg" alt="winners-img">
-                    <h3 class="winers-title">Global Experience in Agency Awards</h3>
-                    <p class="winerrs-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <h3 class="winers-title">Global Experience in<br>Agency Awards</h3>
+                    <p class="winerrs-text">Lorem ipsum is placeholder text<br>commonly used in print, and<br>publishing industries for previewing<br>layouts and visual mockups.</p>
                 </div>
             </div>
             <div class="row round-btn-box">
